# DZ_ProjectFigures

./: CMakeLists.txt  DZ_ProjectFigures.cpp
Figures/: MyEquilateral_Triangle.cpp  MyEquilateral_Triangle.h  MyExeptions.cpp  MyExeptions.h  MyFigures.cpp  MyFigures.h  MyIsosceles_Triangle.cpp  MyIsosceles_Triangle.h  MyParallelogramm.cpp  MyParallelogramm.h  MyQadrangle.cpp  MyQadrangle.h  MyRectangle.cpp  MyRectangle.h  MyRhombus.cpp  MyRhombus.h  MyRight_Triangle.cpp  MyRight_Triangle.h  MySquare.cpp  MySquare.h  MyTriangle.cpp  MyTriangle.h
